--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,10 @@
 !var/sessions/.gitkeep
 !var/SymfonyRequirements.php
 /vendor/
+/web/bundles/framework
 .idea/workspace.xml
 .gitignore~
+.gitignore
 
 
 
