--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,7 +66,7 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
+    transport: gmail             # https://www.google.com/settings/security/lesssecureapps
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
