--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,7 +2,7 @@
 # http://symfony.com/doc/current/book/security.html
 security:
     encoders:
-            RegisterBundle\Entity\User: bcrypt #plaintext #bcrypt
+            RegisterBundle\Entity\User: bcrypt
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
